# VanDeCalc

./: README.md  buildozer.spec  pyproject.toml
tests/: test_calc.py
vandecalc/: app.kv  calc.py  main.py  web_scraping.py
